version before implementing MPI