@@ -7,10 +7,9 @@ public class DistributedSolution {
 
     /**
      * Runs the distributed genetic algorithm.
-     * This version uses a fixed thread pool (with a size equal to the available processors)
-     * and partitions the population so that each worker evaluates only its portion.
-     * Sorting is deferred until after evaluation—ensuring that we only combine partitions and
-     * sort the entire population when needed.
+     * The population is partitioned among custom Worker threads.
+     * Each Worker calls the helper function GeneticAlgorithm.parallelFitnessEvaluation
+     * to evaluate its partition concurrently.
      *
      * @param iterations     Number of generations to run.
      * @param populationSize The population size per generation.
@@ -20,63 +19,71 @@ public class DistributedSolution {
         // Generate the initial population.
         List<MapSolution> population = GeneticAlgorithm.initPopulation(populationSize);
 
-        // Create a fixed thread pool based on available processors.
-        int threads = Runtime.getRuntime().availableProcessors();
-        ExecutorService executor = Executors.newFixedThreadPool(threads);
-
-        // Evaluate the initial population in parallel using partitioned evaluation.
-        // parallelFitnessEvaluation(population, executor);     // Don't need to do this since we already evaluate when iterarating
-
         // Evolve the population for the given number of iterations.
         for (int i = 0; i < iterations; i++) {
-            // Evaluate the current population partition-wise.
-            parallelFitnessEvaluation(population, executor);
+            // Evaluate the current population in a distributed manner.
+            evaluatePopulationDistributed(population);
             // Create a new generation.
             population = GeneticAlgorithm.creatingNewGeneration(population, populationSize, random);
         }
 
         // Final evaluation: sort the last generation to select the best solution.
         population.sort(Comparator.comparingInt(MapSolution::getFitness));
-        Game.setBoard(population.getFirst().getMapLayout());
-        System.out.println("Distributed Best Solution Fitness: " + population.getFirst().getFitness());
-
-        // Shutdown the executor service.
-        executor.shutdown();
-        try {
-            executor.awaitTermination(1, TimeUnit.MINUTES);
-        } catch (InterruptedException e) {
-            e.printStackTrace();
-        }
+        Game.setBoard(population.get(0).getMapLayout());
+        System.out.println("Distributed Best Solution Fitness: " + population.get(0).getFitness());
     }
+
     /**
-     * Evaluates the fitness of all MapSolution objects in the population in parallel.
-     * The method partitions the population based on the number of available threads in the executor.
-     * Each worker thread processes its assigned partition.
+     * Partitions the population among Workers and waits for all Workers to finish.
      *
      * @param population The list of MapSolution instances to evaluate.
-     * @param executor   The ExecutorService used for parallel evaluation.
      */
-    private static void parallelFitnessEvaluation(List<MapSolution> population, ExecutorService executor) {
-        int numThreads = ((ThreadPoolExecutor) executor).getCorePoolSize();
-        int partitionSize = (int) Math.ceil((double) population.size() / numThreads);
-        List<Future<?>> futures = new ArrayList<>();
+    private static void evaluatePopulationDistributed(List<MapSolution> population) {
+        int numWorkers = Runtime.getRuntime().availableProcessors();
+        int partitionSize = (int) Math.ceil((double) population.size() / numWorkers);
+        List<Worker> workers = new ArrayList<>();
 
+        // Partition the population and start a Worker for each partition.
         for (int i = 0; i < population.size(); i += partitionSize) {
             int start = i;
             int end = Math.min(i + partitionSize, population.size());
             List<MapSolution> partition = population.subList(start, end);
-            futures.add(executor.submit(() -> {
-                for (MapSolution solution : partition) {
-                    solution.evaluateFitness();
-                }
-            }));
+            Worker worker = new Worker(partition);
+            workers.add(worker);
+            worker.start();
         }
 
-        // Wait for all submitted tasks to complete.
-        for (Future<?> future : futures) {
+        // Wait for all Workers to complete.
+        for (Worker worker : workers) {
             try {
-                future.get();
-            } catch (InterruptedException | ExecutionException e) {
+                worker.join();
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    /**
+     * Custom Worker class that extends Thread.
+     * Each Worker evaluates the fitness of its partition by calling the helper method.
+     */
+    private static class Worker extends Thread {
+        private final List<MapSolution> partition;
+
+        public Worker(List<MapSolution> partition) {
+            this.partition = partition;
+        }
+
+        @Override
+        public void run() {
+            // Create a temporary executor service for concurrent evaluation in this worker.
+            ExecutorService workerExecutor = Executors.newCachedThreadPool();
+            // Evaluate the fitness for this partition using the helper method.
+            GeneticAlgorithm.parallelFitnessEvaluation(partition, workerExecutor);
+            workerExecutor.shutdown();
+            try {
+                workerExecutor.awaitTermination(1, TimeUnit.MINUTES);
+            } catch (InterruptedException e) {
                 e.printStackTrace();
             }
         }
